change wrong formula for Hamilton function

--- a/doppelpendel/talk.tex
+++ b/doppelpendel/talk.tex
@@ -141,7 +141,7 @@
     \item Hamiltonfunktion
     \begin{equation}
     \nonumber
-    H = \sum_i \theta_i p_i - \mathcal{L}
+    H = \sum_i \dot\theta_i p_i - \mathcal{L}
     \end{equation}
     \item Bewegungsgleichungen
     \begin{align}
