don't show empty slide

--- a/chaos_schuelerinfotag/talk.tex
+++ b/chaos_schuelerinfotag/talk.tex
@@ -107,7 +107,7 @@
 \frame {
     \frametitle{Wovon hängt die Bewegung ab?}
 
-    \only<2>
+    %\only<2>
     {
     Parameter:
     \begin{itemize}
