use videos with better quality

--- a/doppelpendel/talk.tex
+++ b/doppelpendel/talk.tex
@@ -84,12 +84,7 @@
     \frametitle{Was ist ein Doppelpendel?}
 
     \begin{minipage}[b]{0.4\textwidth} 
-    \includegraphics[scale=0.35]{doublependulum.png}
-    
-    \hfill
-    \hrule
-    \ \\
-    {\footnotesize Bildquelle: \href{http://de.wikipedia.org/wiki/Doppelpendel}{Wikipedia} }
+    \includegraphics[scale=1]{sketch.pdf}
     \end{minipage}
     \hfill
     \begin{minipage}[b]{0.4\textwidth}
@@ -307,7 +302,7 @@
     \frametitle{Beispiel -- stabiler periodischer Orbit}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{periodisch.mpeg}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{stabil1.mp4}
 
     $E=15$, $\theta_1=0$, $p_1=2.63362868$
     \end{center}
@@ -317,7 +312,7 @@
     \frametitle{Beispiel -- stabiler periodischer Orbit}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{periodisch_kompliziert.mpeg}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{stabil2.mp4}
 
     $E=15$, $\theta_1=0$, $p_1=-2.78854801$
     \end{center}
@@ -337,7 +332,7 @@
     \frametitle{Beispiel -- quasiperiodischer Orbit}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{quasiperiodisch.mpeg}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{quasiperiodisch.mp4}
 
     $E=15$, $\theta_1=0$, $p_1=-5$
     \end{center}
@@ -347,7 +342,7 @@
     \frametitle{Beispiel -- Chaos}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{11cm}{5.5cm}{chaos.mpeg}
+    \includemovie[poster,autoplay,controls=true]{11cm}{5.5cm}{chaos.mp4}
     links: $E=15$, $\theta_1=0.8$, $p_1=-4$ \\
     rechts: $E=15$, $\theta_1=0.8$, $p_1=-4.01$
     \end{center}
