fix cost function

--- a/neuronal_networks/talk.tex
+++ b/neuronal_networks/talk.tex
@@ -346,8 +346,8 @@
 \frame {
     \frametitle{Kostenfunktion}
 
-    \only<1>   { $$C(\vec w_1,\dots,\vec w_n,b_1,\dots,b_n) = \frac{1}{2N} \sum_{\vec x \in \mathcal{T}} \left\| \, f(\vec x) - \vec a \, \right\|$$ }
-    \only<2,3> { $$C(\vec p) = \frac{1}{2N} \sum_{\vec x \in \mathcal{T}} \left\| \, f(\vec x) - \vec a \, \right\|$$ }
+    \only<1>   { $$C(\vec w_1,\dots,\vec w_n,b_1,\dots,b_n) = \frac{1}{2N} \sum_{\vec x \in \mathcal{T}} \left\| \, f(\vec x) - \vec a \, \right\|^2$$ }
+    \only<2,3> { $$C(\vec p) = \frac{1}{2N} \sum_{\vec x \in \mathcal{T}} \left\| \, f(\vec x) - \vec a \, \right\|^2$$ }
 
     \only<1,2,3>
     {
