--- a/ethanol/talk.tex
+++ b/ethanol/talk.tex
@@ -55,7 +55,7 @@
 \date{19. Dezember 2014}
 
 
-\titlegraphic{\includegraphics[scale=0.3]{gluehwein.jpg}}
+\titlegraphic{\includegraphics[scale=0.3]{images/gluehwein.jpg}}
 
 
 \begin{document}
@@ -99,7 +99,7 @@
 
     \vfill
     \hfill
-    \includegraphics[scale=0.2]{promill.jpg}
+    \includegraphics[scale=0.2]{images/promill.jpg}
 }
 
 \frame {
@@ -115,7 +115,7 @@
 
     \vfill
     \hfill
-    \includegraphics[scale=0.24]{patrick.jpg}
+    \includegraphics[scale=0.24]{images/patrick.jpg}
 }
 
 \subsection{Typen von Alkoholismus}
@@ -171,7 +171,7 @@
     \frametitle{Abbau von Ethanol -- Beispiele}
 
     \begin{center}
-    \includegraphics[scale=1.0]{abbau.pdf}
+    \includegraphics[scale=1.0]{images/abbau.pdf}
     \end{center}
 }
 
@@ -361,7 +361,7 @@
     \item Beispiel: 65kg, $0.7$l Wodka, Gewohnheitstrinker, normale Mahlzeit
 
     \begin{center}
-    \includegraphics[scale=1.0]{rausch_wodka1.pdf}
+    \includegraphics[scale=1.0]{images/rausch_wodka1.pdf}
     \end{center}
     \end{itemize}
 }
@@ -388,7 +388,7 @@
 
     \vfill
     \hfill
-    \includegraphics[scale=0.75]{rausch_wodka2.pdf}
+    \includegraphics[scale=0.75]{images/rausch_wodka2.pdf}
 }
 
 \subsection{Konstantes Trinken}
@@ -423,7 +423,7 @@
     Bsp: Mann, 65kg, Gewohnheitstrinker, $0.7$l Wodka, normale Mahlzeit
 
     \begin{center}
-    \includegraphics[scale=1]{wodka_konst.pdf}
+    \includegraphics[scale=1]{images/wodka_konst.pdf}
     \end{center}
 }
 
@@ -433,7 +433,7 @@
     Bsp: Mann, 65kg, Gewohnheitstrinker, 6 Bier, normale Mahlzeit
 
     \begin{center}
-    \includegraphics[scale=1]{bier.pdf}
+    \includegraphics[scale=1]{images/bier.pdf}
     \end{center}
 }
 
@@ -445,7 +445,7 @@
     Bsp: Mann, 65kg, Gewohnheitstrinker, normale Mahlzeit
 
     \begin{center}
-    \includegraphics[scale=0.9]{bier_auto1.pdf}
+    \includegraphics[scale=0.9]{images/bier_auto1.pdf}
     \end{center}
 }
 
@@ -455,7 +455,7 @@
     Bsp mit Schweinshaxe: große Mahlzeit
 
     \begin{center}
-    \includegraphics[scale=0.9]{bier_auto2.pdf}
+    \includegraphics[scale=0.9]{images/bier_auto2.pdf}
     \end{center}
 }
 
@@ -516,7 +516,7 @@
     \hfil
     \hfil
     \hfil
-    \includegraphics[scale=0.023]{neujahr.jpg}
+    \includegraphics[scale=0.023]{images/neujahr.jpg}
 }
 
 \end{document}
