move images to images/ and videos to videos/

--- a/doppelpendel/talk.tex
+++ b/doppelpendel/talk.tex
@@ -55,7 +55,7 @@
 \date{2. Mai 2013}
 
 
-\titlegraphic{\includegraphics[scale=0.4]{title.png}}
+\titlegraphic{\includegraphics[scale=0.4]{images/title.png}}
 
 
 \begin{document}
@@ -76,7 +76,7 @@
     \frametitle{Was ist ein Doppelpendel?}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{pendulum.mp4}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{videos/pendulum.mp4}
     \end{center}
 }
 
@@ -84,7 +84,7 @@
     \frametitle{Was ist ein Doppelpendel?}
 
     \begin{minipage}[b]{0.4\textwidth} 
-    \includegraphics[scale=1]{sketch.pdf}
+    \includegraphics[scale=1]{images/sketch.pdf}
     \end{minipage}
     \hfill
     \begin{minipage}[b]{0.4\textwidth}
@@ -180,8 +180,8 @@
     \frametitle{Poincaré-Schnitte}
 
     \begin{center}
-    \includegraphics[scale=0.45]{poincare_idea.png}
-    \includegraphics[scale=0.45]{poincare_cycle3.png}
+    \includegraphics[scale=0.45]{images/poincare_idea.png}
+    \includegraphics[scale=0.45]{images/poincare_cycle3.png}
     \end{center}
 
     \hfill
@@ -223,7 +223,7 @@
     \frametitle{Poincaré-Schnitt für $E=15$}
 
     \begin{center}
-    \includegraphics[width=0.65\textwidth]{E=15.pdf}
+    \includegraphics[width=0.65\textwidth]{images/E=15.pdf}
     \end{center}
 }
 
@@ -231,7 +231,7 @@
     \frametitle{Fixpunkte im Poincaré-Schnitt}
 
     \begin{minipage}[b]{0.3\textwidth} 
-    \includegraphics[scale=0.35]{E=15.pdf}
+    \includegraphics[scale=0.35]{images/E=15.pdf}
     \end{minipage}
     \hfill
     \begin{minipage}[b]{0.6\textwidth}
@@ -255,8 +255,8 @@
     \frametitle{Orbits}
 
     \begin{minipage}[b]{0.4\textwidth} 
-    \includegraphics[scale=0.4]{torus_period.png} \\
-    \includegraphics[scale=0.4]{torus_quasi.png}
+    \includegraphics[scale=0.4]{images/torus_period.png} \\
+    \includegraphics[scale=0.4]{images/torus_quasi.png}
     \end{minipage}
     \hfill
     \begin{minipage}[b]{0.5\textwidth}
@@ -265,7 +265,7 @@
     \item dazwischen: beliebig viele periodische Orbits
     \end{itemize}
     \begin{center}
-    \includegraphics[scale=0.7]{ratio.png}
+    \includegraphics[scale=0.7]{images/ratio.png}
     \end{center}
     \end{minipage}
 
@@ -293,7 +293,7 @@
 
     \vfill
     \hfill
-    \includegraphics[scale=0.5]{similar.pdf}
+    \includegraphics[scale=0.5]{images/similar.pdf}
 }
 
 \section{Beispiele}
@@ -302,7 +302,7 @@
     \frametitle{Beispiel -- stabiler periodischer Orbit}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{stabil1.mp4}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{videos/stabil1.mp4}
 
     $E=15$, $\theta_1=0$, $p_1=2.63362868$
     \end{center}
@@ -312,7 +312,7 @@
     \frametitle{Beispiel -- stabiler periodischer Orbit}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{stabil2.mp4}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{videos/stabil2.mp4}
 
     $E=15$, $\theta_1=0$, $p_1=-2.78854801$
     \end{center}
@@ -322,7 +322,7 @@
     \frametitle{Beispiel -- instabiler periodischer Orbit}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{periodisch_instabil.mpeg}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{videos/periodisch_instabil.mpeg}
 
     $E=15$, $\theta_1=0$, $p_1=-4.10536235$
     \end{center}
@@ -332,7 +332,7 @@
     \frametitle{Beispiel -- quasiperiodischer Orbit}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{quasiperiodisch.mp4}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{videos/quasiperiodisch.mp4}
 
     $E=15$, $\theta_1=0$, $p_1=-5$
     \end{center}
@@ -342,7 +342,7 @@
     \frametitle{Beispiel -- Chaos}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{11cm}{5.5cm}{chaos.mp4}
+    \includemovie[poster,autoplay,controls=true]{11cm}{5.5cm}{videos/chaos.mp4}
     links: $E=15$, $\theta_1=0.8$, $p_1=-4$ \\
     rechts: $E=15$, $\theta_1=0.8$, $p_1=-4.01$
     \end{center}
@@ -352,7 +352,7 @@
     \frametitle{Poincaré-Schnitt in Abhängigkeit von $E$}
 
     \begin{center}
-    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{bifurkationen_E.mpeg}
+    \includemovie[poster,autoplay,controls=true]{7.5cm}{7.5cm}{videos/bifurkationen_E.mpeg}
     \end{center}
 }
 
